book: update zh-tw
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/zh-tw/v2/Customizing-Git-An-Example-Git-Enforced-Policy.html
+++ b/external/book/content/book/zh-tw/v2/Customizing-Git-An-Example-Git-Enforced-Policy.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Customizing-Git-Git-Hooks
     next: book/zh-tw/v2/Customizing-Git-Summary
 title: Git - An Example Git-Enforced Policy
+aliases:
+- "/book/zh-tw/Git-客製化-Git-強制策略實例.html"
+- "/book/zh-tw/v1/Git-客製化-Git-強制策略實例.html"
 ---
 <h2 id="r_an_example_git_enforced_policy">An Example Git-Enforced Policy</h2>
 <div class="paragraph">
