--- a/external/book/content/book/zh-tw/v2/Customizing-Git-Git-Configuration.html
+++ b/external/book/content/book/zh-tw/v2/Customizing-Git-Git-Configuration.html
@@ -16,6 +16,11 @@ book:
     previous: book/zh-tw/v2/Git-工具-總結
     next: book/zh-tw/v2/Customizing-Git-Git-Attributes
 title: Git - Git Configuration
+aliases:
+- "/book/zh-tw/Git-客製化.html"
+- "/book/zh-tw/v1/Git-客製化.html"
+- "/book/zh-tw/Git-客製化-Git-配置.html"
+- "/book/zh-tw/v1/Git-客製化-Git-配置.html"
 ---
 <p>So far, we’ve covered the basics of how Git works and how to use it, and we’ve introduced a number of tools that Git provides to help you use it easily and efficiently.
 In this chapter, we’ll see how you can make Git operate in a more customized fashion, by introducing several important configuration settings and the hooks system.
