--- a/external/book/content/book/zh-tw/v2/Customizing-Git-Git-Hooks.html
+++ b/external/book/content/book/zh-tw/v2/Customizing-Git-Git-Hooks.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Customizing-Git-Git-Attributes
     next: book/zh-tw/v2/Customizing-Git-An-Example-Git-Enforced-Policy
 title: Git - Git Hooks
+aliases:
+- "/book/zh-tw/Git-客製化-Git-Hooks.html"
+- "/book/zh-tw/v1/Git-客製化-Git-Hooks.html"
 ---
 <h2 id="r_git_hooks">Git Hooks</h2>
 <div class="paragraph">
