--- a/external/book/content/book/zh-tw/v2/Customizing-Git-Summary.html
+++ b/external/book/content/book/zh-tw/v2/Customizing-Git-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Customizing-Git-An-Example-Git-Enforced-Policy
     next: book/zh-tw/v2/Git-and-Other-Systems-Git-as-a-Client
 title: Git - Summary
+aliases:
+- "/book/zh-tw/Git-客製化-總結.html"
+- "/book/zh-tw/v1/Git-客製化-總結.html"
 ---
 <h2 id="_summary_3">Summary</h2>
 <div class="paragraph">
