--- a/external/book/content/book/zh-tw/v2/Git-Internals-Git-Objects.html
+++ b/external/book/content/book/zh-tw/v2/Git-Internals-Git-Objects.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Git-Internals-Plumbing-and-Porcelain
     next: book/zh-tw/v2/Git-Internals-Git-References
 title: Git - Git Objects
+aliases:
+- "/book/zh-tw/Git-內部原理-Git-物件.html"
+- "/book/zh-tw/v1/Git-內部原理-Git-物件.html"
 ---
 <h2 id="r_objects">Git Objects</h2>
 <div class="paragraph">
