--- a/external/book/content/book/zh-tw/v2/Git-Internals-Maintenance-and-Data-Recovery.html
+++ b/external/book/content/book/zh-tw/v2/Git-Internals-Maintenance-and-Data-Recovery.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Git-Internals-Transfer-Protocols
     next: book/zh-tw/v2/Git-Internals-Environment-Variables
 title: Git - Maintenance and Data Recovery
+aliases:
+- "/book/zh-tw/Git-內部原理-維護及資料復原.html"
+- "/book/zh-tw/v1/Git-內部原理-維護及資料復原.html"
 ---
 <h2 id="_maintenance_and_data_recovery">Maintenance and Data Recovery</h2>
 <div class="paragraph">
