--- a/external/book/content/book/zh-tw/v2/Git-Internals-Summary.html
+++ b/external/book/content/book/zh-tw/v2/Git-Internals-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Git-Internals-Environment-Variables
     next: book/zh-tw/v2/附錄-A:-Git-in-Other-Environments-Graphical-Interfaces
 title: Git - Summary
+aliases:
+- "/book/zh-tw/Git-內部原理-總結.html"
+- "/book/zh-tw/v1/Git-內部原理-總結.html"
 ---
 <h2 id="_summary_5">Summary</h2>
 <div class="paragraph">
