--- a/external/book/content/book/zh-tw/v2/Git-Internals-The-Refspec.html
+++ b/external/book/content/book/zh-tw/v2/Git-Internals-The-Refspec.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Git-Internals-Packfiles
     next: book/zh-tw/v2/Git-Internals-Transfer-Protocols
 title: Git - The Refspec
+aliases:
+- "/book/zh-tw/Git-內部原理-The-Refspec.html"
+- "/book/zh-tw/v1/Git-內部原理-The-Refspec.html"
 ---
 <h2 id="r_refspec">The Refspec</h2>
 <div class="paragraph">
