--- a/external/book/content/book/zh-tw/v2/Git-Internals-Transfer-Protocols.html
+++ b/external/book/content/book/zh-tw/v2/Git-Internals-Transfer-Protocols.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Git-Internals-The-Refspec
     next: book/zh-tw/v2/Git-Internals-Maintenance-and-Data-Recovery
 title: Git - Transfer Protocols
+aliases:
+- "/book/zh-tw/Git-內部原理-傳輸協議.html"
+- "/book/zh-tw/v1/Git-內部原理-傳輸協議.html"
 ---
 <h2 id="_transfer_protocols">Transfer Protocols</h2>
 <div class="paragraph">
