--- a/external/book/content/book/zh-tw/v2/Git-and-Other-Systems-Migrating-to-Git.html
+++ b/external/book/content/book/zh-tw/v2/Git-and-Other-Systems-Migrating-to-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Git-and-Other-Systems-Git-as-a-Client
     next: book/zh-tw/v2/Git-and-Other-Systems-Summary
 title: Git - Migrating to Git
+aliases:
+- "/book/zh-tw/Git-與其他系統-遷移到-Git.html"
+- "/book/zh-tw/v1/Git-與其他系統-遷移到-Git.html"
 ---
 <h2 id="r_migrating">Migrating to Git</h2>
 <div class="paragraph">
