--- a/external/book/content/book/zh-tw/v2/Git-and-Other-Systems-Summary.html
+++ b/external/book/content/book/zh-tw/v2/Git-and-Other-Systems-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Git-and-Other-Systems-Migrating-to-Git
     next: book/zh-tw/v2/Git-Internals-Plumbing-and-Porcelain
 title: Git - Summary
+aliases:
+- "/book/zh-tw/Git-與其他系統-總結.html"
+- "/book/zh-tw/v1/Git-與其他系統-總結.html"
 ---
 <h2 id="_summary_4">Summary</h2>
 <div class="paragraph">
