--- a/external/book/content/book/zh-tw/v2/Git-基礎-取得一個-Git-倉儲.html
+++ b/external/book/content/book/zh-tw/v2/Git-基礎-取得一個-Git-倉儲.html
@@ -17,6 +17,11 @@ book:
     next: book/zh-tw/v2/Git-基礎-紀錄變更到版本庫中
 title: Git - 取得一個 Git 倉儲
 url: "/book/zh-tw/v2/Git-基礎-取得一個-Git-倉儲.html"
+aliases:
+- "/book/zh-tw/Git-基礎.html"
+- "/book/zh-tw/v1/Git-基礎.html"
+- "/book/zh-tw/Git-基礎-取得Git儲存庫.html"
+- "/book/zh-tw/v1/Git-基礎-取得Git儲存庫.html"
 ---
 <p>假如您只能閱讀一章來學習 Git，那麼這個章節就是您的不二選擇。
 本章節涵蓋你以後使用 Git 來完成絕大多數工作時，最常被使用的基本指令。
