--- a/external/book/content/book/zh-tw/v2/Git-基礎-復原.html
+++ b/external/book/content/book/zh-tw/v2/Git-基礎-復原.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-基礎-與遠端協同工作
 title: Git - 復原
 url: "/book/zh-tw/v2/Git-基礎-復原.html"
+aliases:
+- "/book/zh-tw/Git-基礎-復原.html"
+- "/book/zh-tw/v1/Git-基礎-復原.html"
 ---
 <h2 id="r_undoing">復原</h2>
 <div class="paragraph">
