--- a/external/book/content/book/zh-tw/v2/Git-基礎-標籤.html
+++ b/external/book/content/book/zh-tw/v2/Git-基礎-標籤.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-基礎-Git-Aliases
 title: Git - 標籤
 url: "/book/zh-tw/v2/Git-基礎-標籤.html"
+aliases:
+- "/book/zh-tw/Git-基礎-標籤.html"
+- "/book/zh-tw/v1/Git-基礎-標籤.html"
 ---
 <h2 id="r_git_tagging">標籤</h2>
 <div class="paragraph">
