--- a/external/book/content/book/zh-tw/v2/Git-基礎-檢視提交的歷史記錄.html
+++ b/external/book/content/book/zh-tw/v2/Git-基礎-檢視提交的歷史記錄.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-基礎-復原
 title: Git - 檢視提交的歷史記錄
 url: "/book/zh-tw/v2/Git-基礎-檢視提交的歷史記錄.html"
+aliases:
+- "/book/zh-tw/Git-基礎-檢視提交的歷史記錄.html"
+- "/book/zh-tw/v1/Git-基礎-檢視提交的歷史記錄.html"
 ---
 <h2 id="r_viewing_history">檢視提交的歷史記錄</h2>
 <div class="paragraph">
