--- a/external/book/content/book/zh-tw/v2/Git-基礎-紀錄變更到版本庫中.html
+++ b/external/book/content/book/zh-tw/v2/Git-基礎-紀錄變更到版本庫中.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-基礎-檢視提交的歷史記錄
 title: Git - 紀錄變更到版本庫中
 url: "/book/zh-tw/v2/Git-基礎-紀錄變更到版本庫中.html"
+aliases:
+- "/book/zh-tw/Git-基礎-提交更新到儲存庫.html"
+- "/book/zh-tw/v1/Git-基礎-提交更新到儲存庫.html"
 ---
 <h2 id="_紀錄變更到版本庫中">紀錄變更到版本庫中</h2>
 <div class="paragraph">
