--- a/external/book/content/book/zh-tw/v2/Git-基礎-總結.html
+++ b/external/book/content/book/zh-tw/v2/Git-基礎-總結.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/使用-Git-分支-簡述分支
 title: Git - 總結
 url: "/book/zh-tw/v2/Git-基礎-總結.html"
+aliases:
+- "/book/zh-tw/Git-基礎-總結.html"
+- "/book/zh-tw/v1/Git-基礎-總結.html"
 ---
 <h2 id="_總結">總結</h2>
 <div class="paragraph">
