--- a/external/book/content/book/zh-tw/v2/Git-基礎-與遠端協同工作.html
+++ b/external/book/content/book/zh-tw/v2/Git-基礎-與遠端協同工作.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-基礎-標籤
 title: Git - 與遠端協同工作
 url: "/book/zh-tw/v2/Git-基礎-與遠端協同工作.html"
+aliases:
+- "/book/zh-tw/Git-基礎-與遠端協同工作.html"
+- "/book/zh-tw/v1/Git-基礎-與遠端協同工作.html"
 ---
 <h2 id="r_remote_repos">與遠端協同工作</h2>
 <div class="paragraph">
