--- a/external/book/content/book/zh-tw/v2/Git-工具-Advanced-Merging.html
+++ b/external/book/content/book/zh-tw/v2/Git-工具-Advanced-Merging.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-工具-Rerere
 title: Git - Advanced Merging
 url: "/book/zh-tw/v2/Git-工具-Advanced-Merging.html"
+aliases:
+- "/book/zh-tw/Git-工具-子樹合併.html"
+- "/book/zh-tw/v1/Git-工具-子樹合併.html"
 ---
 <h2 id="r_advanced_merging">Advanced Merging</h2>
 <div class="paragraph">
