--- a/external/book/content/book/zh-tw/v2/Git-工具-Interactive-Staging.html
+++ b/external/book/content/book/zh-tw/v2/Git-工具-Interactive-Staging.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-工具-Stashing-and-Cleaning
 title: Git - Interactive Staging
 url: "/book/zh-tw/v2/Git-工具-Interactive-Staging.html"
+aliases:
+- "/book/zh-tw/Git-工具-互動式暫存.html"
+- "/book/zh-tw/v1/Git-工具-互動式暫存.html"
 ---
 <h2 id="r_interactive_staging">Interactive Staging</h2>
 <div class="paragraph">
