--- a/external/book/content/book/zh-tw/v2/Git-工具-Revision-Selection.html
+++ b/external/book/content/book/zh-tw/v2/Git-工具-Revision-Selection.html
@@ -17,6 +17,11 @@ book:
     next: book/zh-tw/v2/Git-工具-Interactive-Staging
 title: Git - Revision Selection
 url: "/book/zh-tw/v2/Git-工具-Revision-Selection.html"
+aliases:
+- "/book/zh-tw/Git-工具.html"
+- "/book/zh-tw/v1/Git-工具.html"
+- "/book/zh-tw/Git-工具-選擇修訂版本.html"
+- "/book/zh-tw/v1/Git-工具-選擇修訂版本.html"
 ---
 <p>到目前為止，你已經學到用來管理或維護你原始碼的 Git 版本庫（repository）所需的大部分常用指令和流程，
 你已經完成追蹤及提交檔案的基本任務，並利用暫存區域以及輕量級主題分支和合併的功能。</p><p>現在將帶你探索一些你平常可能用不到，有時候卻可能會派上用場的強大 Git 功能。</p>
