--- a/external/book/content/book/zh-tw/v2/Git-工具-Rewriting-History.html
+++ b/external/book/content/book/zh-tw/v2/Git-工具-Rewriting-History.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-工具-Reset-Demystified
 title: Git - Rewriting History
 url: "/book/zh-tw/v2/Git-工具-Rewriting-History.html"
+aliases:
+- "/book/zh-tw/Git-工具-重寫歷史.html"
+- "/book/zh-tw/v1/Git-工具-重寫歷史.html"
 ---
 <h2 id="r_rewriting_history">Rewriting History</h2>
 <div class="paragraph">
