--- a/external/book/content/book/zh-tw/v2/Git-工具-Stashing-and-Cleaning.html
+++ b/external/book/content/book/zh-tw/v2/Git-工具-Stashing-and-Cleaning.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-工具-Signing-Your-Work
 title: Git - Stashing and Cleaning
 url: "/book/zh-tw/v2/Git-工具-Stashing-and-Cleaning.html"
+aliases:
+- "/book/zh-tw/Git-工具-儲藏-Stashing.html"
+- "/book/zh-tw/v1/Git-工具-儲藏-Stashing.html"
 ---
 <h2 id="r_git_stashing">Stashing and Cleaning</h2>
 <div class="paragraph">
