--- a/external/book/content/book/zh-tw/v2/Git-工具-Submodules.html
+++ b/external/book/content/book/zh-tw/v2/Git-工具-Submodules.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-工具-Bundling
 title: Git - Submodules
 url: "/book/zh-tw/v2/Git-工具-Submodules.html"
+aliases:
+- "/book/zh-tw/Git-工具-子模組-Submodules.html"
+- "/book/zh-tw/v1/Git-工具-子模組-Submodules.html"
 ---
 <h2 id="r_git_submodules">Submodules</h2>
 <div class="paragraph">
