--- a/external/book/content/book/zh-tw/v2/Git-工具-總結.html
+++ b/external/book/content/book/zh-tw/v2/Git-工具-總結.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Customizing-Git-Git-Configuration
 title: Git - 總結
 url: "/book/zh-tw/v2/Git-工具-總結.html"
+aliases:
+- "/book/zh-tw/Git-工具-總結.html"
+- "/book/zh-tw/v1/Git-工具-總結.html"
 ---
 <h2 id="_總結_6">總結</h2>
 <div class="paragraph">
