--- a/external/book/content/book/zh-tw/v2/伺服器上的-Git-Git-常駐程式.html
+++ b/external/book/content/book/zh-tw/v2/伺服器上的-Git-Git-常駐程式.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/伺服器上的-Git-Smart-HTTP
 title: Git - Git 常駐程式
 url: "/book/zh-tw/v2/伺服器上的-Git-Git-常駐程式.html"
+aliases:
+- "/book/zh-tw/Git-on-the-Server-Git-Daemon.html"
+- "/book/zh-tw/v1/Git-on-the-Server-Git-Daemon.html"
 ---
 <h2 id="_git_常駐程式">Git 常駐程式</h2>
 <div class="paragraph">
