--- a/external/book/content/book/zh-tw/v2/伺服器上的-Git-在伺服器上佈署-Git.html
+++ b/external/book/content/book/zh-tw/v2/伺服器上的-Git-在伺服器上佈署-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/伺服器上的-Git-產生你的-SSH-公鑰
 title: Git - 在伺服器上佈署 Git
 url: "/book/zh-tw/v2/伺服器上的-Git-在伺服器上佈署-Git.html"
+aliases:
+- "/book/zh-tw/Git-on-the-Server-Getting-Git-on-a-Server.html"
+- "/book/zh-tw/v1/Git-on-the-Server-Getting-Git-on-a-Server.html"
 ---
 <h2 id="r_git_on_the_server">在伺服器上佈署 Git</h2>
 <div class="paragraph">
