--- a/external/book/content/book/zh-tw/v2/伺服器上的-Git-產生你的-SSH-公鑰.html
+++ b/external/book/content/book/zh-tw/v2/伺服器上的-Git-產生你的-SSH-公鑰.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/伺服器上的-Git-設定伺服器
 title: Git - 產生你的 SSH 公鑰
 url: "/book/zh-tw/v2/伺服器上的-Git-產生你的-SSH-公鑰.html"
+aliases:
+- "/book/zh-tw/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
+- "/book/zh-tw/v1/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
 ---
 <h2 id="r_generate_ssh_key">產生你的 SSH 公鑰</h2>
 <div class="paragraph">
