--- a/external/book/content/book/zh-tw/v2/伺服器上的-Git-第3方-Git-託管方案.html
+++ b/external/book/content/book/zh-tw/v2/伺服器上的-Git-第3方-Git-託管方案.html
@@ -17,6 +17,17 @@ book:
     next: book/zh-tw/v2/伺服器上的-Git-總結
 title: Git - 第3方 Git 託管方案
 url: "/book/zh-tw/v2/伺服器上的-Git-第3方-Git-託管方案.html"
+aliases:
+- "/book/zh-tw/Git-on-the-Server-Public-Access.html"
+- "/book/zh-tw/v1/Git-on-the-Server-Public-Access.html"
+- "/book/zh-tw/Git-on-the-Server-GitWeb.html"
+- "/book/zh-tw/v1/Git-on-the-Server-GitWeb.html"
+- "/book/zh-tw/Git-on-the-Server-Gitosis.html"
+- "/book/zh-tw/v1/Git-on-the-Server-Gitosis.html"
+- "/book/zh-tw/Git-on-the-Server-Gitolite.html"
+- "/book/zh-tw/v1/Git-on-the-Server-Gitolite.html"
+- "/book/zh-tw/Git-on-the-Server-Hosted-Git.html"
+- "/book/zh-tw/v1/Git-on-the-Server-Hosted-Git.html"
 ---
 <h2 id="_第3方_git_託管方案">第3方 Git 託管方案</h2>
 <div class="paragraph">
