--- a/external/book/content/book/zh-tw/v2/伺服器上的-Git-設定伺服器.html
+++ b/external/book/content/book/zh-tw/v2/伺服器上的-Git-設定伺服器.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/伺服器上的-Git-Git-常駐程式
 title: Git - 設定伺服器
 url: "/book/zh-tw/v2/伺服器上的-Git-設定伺服器.html"
+aliases:
+- "/book/zh-tw/Git-on-the-Server-Setting-Up-the-Server.html"
+- "/book/zh-tw/v1/Git-on-the-Server-Setting-Up-the-Server.html"
 ---
 <h2 id="r_setting_up_server">設定伺服器</h2>
 <div class="paragraph">
