--- a/external/book/content/book/zh-tw/v2/伺服器上的-Git-通訊協定.html
+++ b/external/book/content/book/zh-tw/v2/伺服器上的-Git-通訊協定.html
@@ -17,6 +17,11 @@ book:
     next: book/zh-tw/v2/伺服器上的-Git-在伺服器上佈署-Git
 title: Git - 通訊協定
 url: "/book/zh-tw/v2/伺服器上的-Git-通訊協定.html"
+aliases:
+- "/book/zh-tw/Git-on-the-Server.html"
+- "/book/zh-tw/v1/Git-on-the-Server.html"
+- "/book/zh-tw/Git-on-the-Server-The-Protocols.html"
+- "/book/zh-tw/v1/Git-on-the-Server-The-Protocols.html"
 ---
 <p>
 At this point, you should be able to do most of the day-to-day tasks for which you’ll be using Git.
