--- a/external/book/content/book/zh-tw/v2/使用-Git-分支-分支和合併的基本用法.html
+++ b/external/book/content/book/zh-tw/v2/使用-Git-分支-分支和合併的基本用法.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/使用-Git-分支-分支管理
 title: Git - 分支和合併的基本用法
 url: "/book/zh-tw/v2/使用-Git-分支-分支和合併的基本用法.html"
+aliases:
+- "/book/zh-tw/Git-Branching-Basic-Branching-and-Merging.html"
+- "/book/zh-tw/v1/Git-Branching-Basic-Branching-and-Merging.html"
 ---
 <h2 id="_分支和合併的基本用法">分支和合併的基本用法</h2>
 <div class="paragraph">
