--- a/external/book/content/book/zh-tw/v2/使用-Git-分支-分支工作流程.html
+++ b/external/book/content/book/zh-tw/v2/使用-Git-分支-分支工作流程.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/使用-Git-分支-遠端分支
 title: Git - 分支工作流程
 url: "/book/zh-tw/v2/使用-Git-分支-分支工作流程.html"
+aliases:
+- "/book/zh-tw/Git-Branching-Branching-Workflows.html"
+- "/book/zh-tw/v1/Git-Branching-Branching-Workflows.html"
 ---
 <h2 id="_分支工作流程">分支工作流程</h2>
 <div class="paragraph">
