--- a/external/book/content/book/zh-tw/v2/使用-Git-分支-分支管理.html
+++ b/external/book/content/book/zh-tw/v2/使用-Git-分支-分支管理.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/使用-Git-分支-分支工作流程
 title: Git - 分支管理
 url: "/book/zh-tw/v2/使用-Git-分支-分支管理.html"
+aliases:
+- "/book/zh-tw/Git-Branching-Branch-Management.html"
+- "/book/zh-tw/v1/Git-Branching-Branch-Management.html"
 ---
 <h2 id="r_branch_management">分支管理</h2>
 <div class="paragraph">
