--- a/external/book/content/book/zh-tw/v2/使用-Git-分支-簡述分支.html
+++ b/external/book/content/book/zh-tw/v2/使用-Git-分支-簡述分支.html
@@ -17,6 +17,11 @@ book:
     next: book/zh-tw/v2/使用-Git-分支-分支和合併的基本用法
 title: Git - 簡述分支
 url: "/book/zh-tw/v2/使用-Git-分支-簡述分支.html"
+aliases:
+- "/book/zh-tw/Git-Branching.html"
+- "/book/zh-tw/v1/Git-Branching.html"
+- "/book/zh-tw/Git-Branching-What-a-Branch-Is.html"
+- "/book/zh-tw/v1/Git-Branching-What-a-Branch-Is.html"
 ---
 <p>
 幾乎每一種版本控制系統（Version Control System，以下簡稱 VCS）都支援某種形式的分支（branch）功能，
