--- a/external/book/content/book/zh-tw/v2/使用-Git-分支-總結.html
+++ b/external/book/content/book/zh-tw/v2/使用-Git-分支-總結.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/伺服器上的-Git-通訊協定
 title: Git - 總結
 url: "/book/zh-tw/v2/使用-Git-分支-總結.html"
+aliases:
+- "/book/zh-tw/Git-Branching-Summary.html"
+- "/book/zh-tw/v1/Git-Branching-Summary.html"
 ---
 <h2 id="_總結_2">總結</h2>
 <div class="paragraph">
