--- a/external/book/content/book/zh-tw/v2/使用-Git-分支-衍合.html
+++ b/external/book/content/book/zh-tw/v2/使用-Git-分支-衍合.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/使用-Git-分支-總結
 title: Git - 衍合
 url: "/book/zh-tw/v2/使用-Git-分支-衍合.html"
+aliases:
+- "/book/zh-tw/Git-Branching-Rebasing.html"
+- "/book/zh-tw/v1/Git-Branching-Rebasing.html"
 ---
 <h2 id="r_rebasing">衍合</h2>
 <div class="paragraph">
