--- a/external/book/content/book/zh-tw/v2/使用-Git-分支-遠端分支.html
+++ b/external/book/content/book/zh-tw/v2/使用-Git-分支-遠端分支.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/使用-Git-分支-衍合
 title: Git - 遠端分支
 url: "/book/zh-tw/v2/使用-Git-分支-遠端分支.html"
+aliases:
+- "/book/zh-tw/Git-Branching-Remote-Branches.html"
+- "/book/zh-tw/v1/Git-Branching-Remote-Branches.html"
 ---
 <h2 id="r_remote_branches">遠端分支</h2>
 <div class="paragraph">
