--- a/external/book/content/book/zh-tw/v2/分散式的-Git-Summary.html
+++ b/external/book/content/book/zh-tw/v2/分散式的-Git-Summary.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/GitHub-建立帳戶及設定
 title: Git - Summary
 url: "/book/zh-tw/v2/分散式的-Git-Summary.html"
+aliases:
+- "/book/zh-tw/Distributed-Git-Summary.html"
+- "/book/zh-tw/v1/Distributed-Git-Summary.html"
 ---
 <h2 id="_summary">Summary</h2>
 <div class="paragraph">
