--- a/external/book/content/book/zh-tw/v2/分散式的-Git-對專案進行貢獻.html
+++ b/external/book/content/book/zh-tw/v2/分散式的-Git-對專案進行貢獻.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/分散式的-Git-維護一個專案
 title: Git - 對專案進行貢獻
 url: "/book/zh-tw/v2/分散式的-Git-對專案進行貢獻.html"
+aliases:
+- "/book/zh-tw/Distributed-Git-Contributing-to-a-Project.html"
+- "/book/zh-tw/v1/Distributed-Git-Contributing-to-a-Project.html"
 ---
 <h2 id="r_contributing_project">對專案進行貢獻</h2>
 <div class="paragraph">
