--- a/external/book/content/book/zh-tw/v2/分散式的-Git-維護一個專案.html
+++ b/external/book/content/book/zh-tw/v2/分散式的-Git-維護一個專案.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/分散式的-Git-Summary
 title: Git - 維護一個專案
 url: "/book/zh-tw/v2/分散式的-Git-維護一個專案.html"
+aliases:
+- "/book/zh-tw/Distributed-Git-Maintaining-a-Project.html"
+- "/book/zh-tw/v1/Distributed-Git-Maintaining-a-Project.html"
 ---
 <h2 id="_維護一個專案">維護一個專案</h2>
 <div class="paragraph">
