--- a/external/book/content/book/zh-tw/v2/開始-關於版本控制.html
+++ b/external/book/content/book/zh-tw/v2/開始-關於版本控制.html
@@ -17,6 +17,11 @@ book:
     next: book/zh-tw/v2/開始-Git-的簡史
 title: Git - 關於版本控制
 url: "/book/zh-tw/v2/開始-關於版本控制.html"
+aliases:
+- "/book/zh-tw/開始.html"
+- "/book/zh-tw/v1/開始.html"
+- "/book/zh-tw/開始-關於版本控制.html"
+- "/book/zh-tw/v1/開始-關於版本控制.html"
 ---
 <p>本章將介紹 Git 的相關知識。首先將從版本控制工具的背景知識開始，接著是如何在你的系統上運作 Git，而最後則是如何設定它。
 閱讀完本章後你應該可以了解為什麼 Git 如此流行、為何你應該使用它，並完成準備工作。</p>
