--- a/external/book/content/book/zh-tw/v2/Customizing-Git-Git-Attributes.html
+++ b/external/book/content/book/zh-tw/v2/Customizing-Git-Git-Attributes.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Customizing-Git-Git-Configuration
     next: book/zh-tw/v2/Customizing-Git-Git-Hooks
 title: Git - Git Attributes
+aliases:
+- "/book/zh-tw/Git-客製化-Git-屬性.html"
+- "/book/zh-tw/v1/Git-客製化-Git-屬性.html"
 ---
 <h2 id="_git_attributes">Git Attributes</h2>
 <div class="paragraph">
