--- a/external/book/content/book/zh-tw/v2/Git-Internals-Git-References.html
+++ b/external/book/content/book/zh-tw/v2/Git-Internals-Git-References.html
@@ -16,6 +16,9 @@ book:
     previous: book/zh-tw/v2/Git-Internals-Git-Objects
     next: book/zh-tw/v2/Git-Internals-Packfiles
 title: Git - Git References
+aliases:
+- "/book/zh-tw/Git-內部原理-Git-References.html"
+- "/book/zh-tw/v1/Git-內部原理-Git-References.html"
 ---
 <h2 id="r_git_refs">Git References</h2>
 <div class="paragraph">
