--- a/external/book/content/book/zh-tw/v2/Git-and-Other-Systems-Git-as-a-Client.html
+++ b/external/book/content/book/zh-tw/v2/Git-and-Other-Systems-Git-as-a-Client.html
@@ -16,6 +16,11 @@ book:
     previous: book/zh-tw/v2/Customizing-Git-Summary
     next: book/zh-tw/v2/Git-and-Other-Systems-Migrating-to-Git
 title: Git - Git as a Client
+aliases:
+- "/book/zh-tw/Git-與其他系統.html"
+- "/book/zh-tw/v1/Git-與其他系統.html"
+- "/book/zh-tw/Git-與其他系統-Git-與-Subversion.html"
+- "/book/zh-tw/v1/Git-與其他系統-Git-與-Subversion.html"
 ---
 <p>The world isn’t perfect.
 Usually, you can’t immediately switch every project you come in contact with to Git.
