--- a/external/book/content/book/zh-tw/v2/Git-基礎-Git-Aliases.html
+++ b/external/book/content/book/zh-tw/v2/Git-基礎-Git-Aliases.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-基礎-總結
 title: Git - Git Aliases
 url: "/book/zh-tw/v2/Git-基礎-Git-Aliases.html"
+aliases:
+- "/book/zh-tw/Git-基礎-提示和技巧.html"
+- "/book/zh-tw/v1/Git-基礎-提示和技巧.html"
 ---
 <h2 id="r_git_aliases">Git Aliases</h2>
 <div class="paragraph">
