--- a/external/book/content/book/zh-tw/v2/Git-工具-Debugging-with-Git.html
+++ b/external/book/content/book/zh-tw/v2/Git-工具-Debugging-with-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-工具-Submodules
 title: Git - Debugging with Git
 url: "/book/zh-tw/v2/Git-工具-Debugging-with-Git.html"
+aliases:
+- "/book/zh-tw/Git-工具-使用-Git-做-Debug.html"
+- "/book/zh-tw/v1/Git-工具-使用-Git-做-Debug.html"
 ---
 <h2 id="_debugging_with_git">Debugging with Git</h2>
 <div class="paragraph">
