--- a/external/book/content/book/zh-tw/v2/_index.html
+++ b/external/book/content/book/zh-tw/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/zh-tw/v2.html"
 aliases:
 - "/book/zh-tw/v2/index.html"
+- "/book/zh-tw/v1/index.html"
 - "/book/zh-tw/index.html"
 ---
