--- a/external/book/content/book/zh-tw/v2/伺服器上的-Git-總結.html
+++ b/external/book/content/book/zh-tw/v2/伺服器上的-Git-總結.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/分散式的-Git-分散式工作流程
 title: Git - 總結
 url: "/book/zh-tw/v2/伺服器上的-Git-總結.html"
+aliases:
+- "/book/zh-tw/Git-on-the-Server-Summary.html"
+- "/book/zh-tw/v1/Git-on-the-Server-Summary.html"
 ---
 <h2 id="_總結_3">總結</h2>
 <div class="paragraph">
