--- a/external/book/content/book/zh-tw/v2/分散式的-Git-分散式工作流程.html
+++ b/external/book/content/book/zh-tw/v2/分散式的-Git-分散式工作流程.html
@@ -17,6 +17,11 @@ book:
     next: book/zh-tw/v2/分散式的-Git-對專案進行貢獻
 title: Git - 分散式工作流程
 url: "/book/zh-tw/v2/分散式的-Git-分散式工作流程.html"
+aliases:
+- "/book/zh-tw/Distributed-Git.html"
+- "/book/zh-tw/v1/Distributed-Git.html"
+- "/book/zh-tw/Distributed-Git-Distributed-Workflows.html"
+- "/book/zh-tw/v1/Distributed-Git-Distributed-Workflows.html"
 ---
 <p>
 Now that you have a remote Git repository set up as a point for all the developers to share their code, and you’re familiar with basic Git commands in a local workflow, you’ll look at how to utilize some of the distributed workflows that Git affords you.</p><p>In this chapter, you’ll see how to work with Git in a distributed environment as a contributor and an integrator.
