--- a/external/book/content/book/zh-tw/v2/開始-Git-基礎要點.html
+++ b/external/book/content/book/zh-tw/v2/開始-Git-基礎要點.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/開始-命令列
 title: Git - Git 基礎要點
 url: "/book/zh-tw/v2/開始-Git-基礎要點.html"
+aliases:
+- "/book/zh-tw/開始-Git-基礎要點.html"
+- "/book/zh-tw/v1/開始-Git-基礎要點.html"
 ---
 <h2 id="_git_基礎要點">Git 基礎要點</h2>
 <div class="paragraph">
