--- a/external/book/content/book/zh-tw/v2/開始-Git-安裝教學.html
+++ b/external/book/content/book/zh-tw/v2/開始-Git-安裝教學.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/開始-初次設定-Git
 title: Git - Git 安裝教學
 url: "/book/zh-tw/v2/開始-Git-安裝教學.html"
+aliases:
+- "/book/zh-tw/開始-安裝Git.html"
+- "/book/zh-tw/v1/開始-安裝Git.html"
 ---
 <h2 id="_git_安裝教學">Git 安裝教學</h2>
 <div class="paragraph">
