--- a/external/book/content/book/zh-tw/v2/開始-Git-的簡史.html
+++ b/external/book/content/book/zh-tw/v2/開始-Git-的簡史.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/開始-Git-基礎要點
 title: Git - Git 的簡史
 url: "/book/zh-tw/v2/開始-Git-的簡史.html"
+aliases:
+- "/book/zh-tw/開始-Git-的簡史.html"
+- "/book/zh-tw/v1/開始-Git-的簡史.html"
 ---
 <h2 id="_git_的簡史">Git 的簡史</h2>
 <div class="paragraph">
