--- a/external/book/content/book/zh-tw/v2/開始-初次設定-Git.html
+++ b/external/book/content/book/zh-tw/v2/開始-初次設定-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/開始-取得說明文件
 title: Git - 初次設定 Git
 url: "/book/zh-tw/v2/開始-初次設定-Git.html"
+aliases:
+- "/book/zh-tw/開始-初次設定Git.html"
+- "/book/zh-tw/v1/開始-初次設定Git.html"
 ---
 <h2 id="r_first_time">初次設定 Git</h2>
 <div class="paragraph">
