--- a/external/book/content/book/zh-tw/v2/開始-取得說明文件.html
+++ b/external/book/content/book/zh-tw/v2/開始-取得說明文件.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/開始-摘要
 title: Git - 取得說明文件
 url: "/book/zh-tw/v2/開始-取得說明文件.html"
+aliases:
+- "/book/zh-tw/開始-取得說明文件.html"
+- "/book/zh-tw/v1/開始-取得說明文件.html"
 ---
 <h2 id="r_git_help">取得說明文件</h2>
 <div class="paragraph">
