--- a/external/book/content/book/zh-tw/v2/開始-摘要.html
+++ b/external/book/content/book/zh-tw/v2/開始-摘要.html
@@ -17,6 +17,9 @@ book:
     next: book/zh-tw/v2/Git-基礎-取得一個-Git-倉儲
 title: Git - 摘要
 url: "/book/zh-tw/v2/開始-摘要.html"
+aliases:
+- "/book/zh-tw/開始-總結.html"
+- "/book/zh-tw/v1/開始-總結.html"
 ---
 <h2 id="_摘要">摘要</h2>
 <div class="paragraph">
