book: update sl
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/sl/v2/_index.html
+++ b/external/book/content/book/sl/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/sl/v2.html"
 aliases:
 - "/book/sl/v2/index.html"
+- "/book/sl/v1/index.html"
 - "/book/sl/index.html"
 ---
